--- a/css/custom.css
+++ b/css/custom.css
@@ -61,3 +61,9 @@ p.custom-btn-comprar a {
     color: black !important;
     border: solid 1px !important;
 }
+
+h2.custom-slider-text.herbalist-kit {
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+}
