--- a/css/custom.css
+++ b/css/custom.css
@@ -62,6 +62,9 @@ p.custom-btn-comprar a {
     border: solid 1px !important;
 }
 
+h2.custom-slider-text {
+    text-shadow: 2px 2px #0000004f;
+}
 
 @media only screen and (max-width: 620px) {
     h2.custom-slider-text.herbalist-kit {
