--- a/css/custom.css
+++ b/css/custom.css
@@ -71,5 +71,6 @@ h2.custom-slider-text {
         font-size: 20px;
         line-height: 20px;
         text-align: center;
+        text-shadow: none;
     }
 }
