--- a/css/custom.css
+++ b/css/custom.css
@@ -62,11 +62,11 @@ p.custom-btn-comprar a {
     border: solid 1px !important;
 }
 
-
+/*
 @media only screen and (max-width: 980px){
     .feature-slider {
         min-height: 180px;
     }
 }
-
+*/
 
